Hid roadmap and promo on en locale

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -34,5 +34,7 @@
     "contacts.form.name.placeholder": "Your name",
     "contacts.form.email.placeholder": "Your email",
     "contacts.form.text.placeholder": "Your question",
-    "contacts.form.submit-text": "Send"
+    "contacts.form.submit-text": "Send",
+
+    "locale": "en"
 }
