Added locales to cards

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,40 +1,103 @@
 {
-    "nav.description": "Description",
-    "nav.team": "Team",
-    "nav.roadmap": "Roadmap",
-    "nav.advantages": "Advantages",
-    "nav.contacts": "Contacts",
-    "nav.locale": "🇬🇧",
+  "nav.description": "Description",
+  "nav.team": "Team",
+  "nav.roadmap": "Roadmap",
+  "nav.advantages": "Advantages",
+  "nav.contacts": "Contacts",
+  "nav.locale": "🇬🇧",
 
-    "logo.description": "The 'Smart Recipe' application uses the latest technologies and fresh ideas to make the cooking process convenient and economical for you.",
-    "logo.description.sub": "New way for recipes",
-    
-    "header.promo": "Promo-video",
-    "header.team": "Team",
-    "header.speacial-thanks": "Special Thanks",
-    "header.advantages": "Advantages",
-    "header.roadmap": "Roadmap",
-    "header.contacts": "Any questions?",
-    
-    "advantages.description.one": "Machine learning algorithms recognize different products in photographs and select recipes based on the availability of ingredients and your taste preferences.",
-    "advantages.description.second": "There is no need to leave home: missing products can be ordered in one click from partner stores.",
-    "advantages.description.third": "The unique interactive recipe system offers various ways to speed up the cooking process.",
-    "advantages.description.fourth": "You can add your own recipes and share it with others or rate existing ones.",
-    "advantages.description.fifth": "A detailed filtering and sorting system will make it easy to find the recipe you need.",
-    "advantages.description.sixth": "You can also customize the selection of recipes for yourself thanks to the blacklist of ingredients, and save the recipe in your favorites.",
-    "advantages.description.seventh": "You will immediately be able to easily use all the functionality of our application thanks to a clear interface with detailed guides on each page",
+  "logo.description": "The 'Smart Recipe' application uses the latest technologies and fresh ideas to make the cooking process convenient and economical for you.",
+  "logo.description.sub": "New way for recipes",
 
-    "roadmap.guide": "- We are here",
+  "header.promo": "Promo-video",
+  "header.team": "Team",
+  "header.speacial-thanks": "Special Thanks",
+  "header.advantages": "Advantages",
+  "header.roadmap": "Roadmap",
+  "header.contacts": "Any questions?",
 
-    "contacts.email": "Email: ",
-    "contacts.media": "Media:",
-    "contacts.form.name": "Name",
-    "contacts.form.email": "Email",
-    "contacts.form.text": "Text",
-    "contacts.form.name.placeholder": "Your name",
-    "contacts.form.email.placeholder": "Your email",
-    "contacts.form.text.placeholder": "Your question",
-    "contacts.form.submit-text": "Send",
+  "advantages.description.one": "Machine learning algorithms recognize different products in photographs and select recipes based on the availability of ingredients and your taste preferences.",
+  "advantages.description.second": "There is no need to leave home: missing products can be ordered in one click from partner stores.",
+  "advantages.description.third": "The unique interactive recipe system offers various ways to speed up the cooking process.",
+  "advantages.description.fourth": "You can add your own recipes and share it with others or rate existing ones.",
+  "advantages.description.fifth": "A detailed filtering and sorting system will make it easy to find the recipe you need.",
+  "advantages.description.sixth": "You can also customize the selection of recipes for yourself thanks to the blacklist of ingredients, and save the recipe in your favorites.",
+  "advantages.description.seventh": "You will immediately be able to easily use all the functionality of our application thanks to a clear interface with detailed guides on each page",
 
-    "locale": "en"
+  "roadmap.guide": "- We are here",
+
+  "contacts.email": "Email: ",
+  "contacts.media": "Media:",
+  "contacts.form.name": "Name",
+  "contacts.form.email": "Email",
+  "contacts.form.text": "Text",
+  "contacts.form.name.placeholder": "Your name",
+  "contacts.form.email.placeholder": "Your email",
+  "contacts.form.text.placeholder": "Your question",
+  "contacts.form.submit-text": "Send",
+
+  "locale": "en",
+
+  "Мотякин Артем.name": "Motyakin Artem",
+  "Мотякин Артем.position": "Leader",
+  "Мотякин Артем.description": "Student at HSE CB, 3rd year",
+  "Мотякин Артем.work": "Work: Huawei AI Laboratory, AI Optimization and Acceleration department.",
+  "Мотякин Артем.info": "Interests: Project Management, participation in hackathons as a backend & ml developer",
+
+  "Копырин Максим.name": "Kopyrin Maxim",
+  "Копырин Максим.position": "Teamlead front-end /designer",
+  "Копырин Максим.description": "Student at HSE CB, 3rd year",
+  "Копырин Максим.work": "Work: Rostelecom СОD, Security Monitoring department",
+  "Копырин Максим.info": "Interests: CTF, OSINT reconnaissance, front-end, design",
+
+  "Семенищев Матвей.name": "Semenischev Matvey",
+  "Семенищев Матвей.position": "Teamlead back-end",
+  "Семенищев Матвей.description": "Student at HSE IS, 3rd year",
+  "Семенищев Матвей.stack": "Postgres, Django, Selenium, REST API",
+  "Семенищев Матвей.info": "Interests: Website development, data parsing, chess",
+
+  "Емельяненко Даниил.name": "Emelyanenko Daniil",
+  "Емельяненко Даниил.position": "Devops/System Architect",
+  "Емельяненко Даниил.description": "Student at HSE CB, 3rd year",
+  "Емельяненко Даниил.work": "Work: FullStack Developer at Neuronet LLC",
+  "Емельяненко Даниил.stack": "JS (VueJS, NestJS, AdonisJS), Python (Django)",
+  "Емельяненко Даниил.info": "Interests: Drawing, playing guitar, hackathons",
+
+  "Зотьев Егор.name": "Zotev Egor",
+  "Зотьев Егор.position": "Product Analyst",
+  "Зотьев Егор.description": "Owns a studio for integrating new technologies and modernizing business processes",
+  "Зотьев Егор.stack": "C/C++, Python",
+  "Зотьев Егор.info": "Interests: Product Analytics, Business Planning",
+
+  "Федоров Михаил.name": "Fedorov Mikhail",
+  "Федоров Михаил.position": "Front-end/designer",
+  "Федоров Михаил.description": "Studying at HSE IS, 3rd year",
+  "Федоров Михаил.work": "I like to write interesting small programs, not just as homework",
+  "Федоров Михаил.stack": "Python, JS",
+  "Федоров Михаил.info": "Interests: Fashion/Design, Programming",
+
+  "Гетун Сергей.name": "Getun Sergey",
+  "Гетун Сергей.position": "Back-end Developer",
+  "Гетун Сергей.description": "Student at HSE CB, 3rd year",
+  "Гетун Сергей.stack": "Python, Django",
+  "Гетун Сергей.info": "Interests: Writing back-end part for various projects, Python developer",
+
+  "Сендик Михаил.name": "Sendik Mikhail",
+  "Сендик Михаил.position": "ML/CV Developer",
+  "Сендик Михаил.description": "Student at MISiS BIST-21-1, 3rd year",
+  "Сендик Михаил.work": "Work: Smart contract developer",
+  "Сендик Михаил.stack": "ML engineer, CV, NLP",
+  "Сендик Михаил.info": "Interests: Writing CV projects in the field of games and traffic",
+
+  "Комиссаренко Алексей.name": "Kommisarenko Alexey",
+  "Комиссаренко Алексей.position": "ML/CV Developer",
+  "Комиссаренко Алексей.description": "Student at MISiS BIST-21-1, 3rd year",
+  "Комиссаренко Алексей.work": "Work: DIT",
+  "Комиссаренко Алексей.stack": "Python, PyTorch, Classic ML, DL, CV, NLP",
+
+  "Бобер Станислав.name": "Bober Stanislav",
+  "Бобер Станислав.description": "Senior lecturer at HSE",
+  "Бобер Станислав.work": "Work: Chief Software Developer at StatSoft",
+  "Бобер Станислав.position": "Department Head",
+  "Бобер Станислав.info": "Interests: programming, mathematical modeling"
 }
