--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -1,40 +1,103 @@
 {
-    "nav.description": "Описание",
-    "nav.team": "Команда",
-    "nav.roadmap": "Роадмап",
-    "nav.advantages": "Преимущества",
-    "nav.contacts": "Контакты",
-    "nav.locale": "🇷🇺",
+  "nav.description": "Описание",
+  "nav.team": "Команда",
+  "nav.roadmap": "Роадмап",
+  "nav.advantages": "Преимущества",
+  "nav.contacts": "Контакты",
+  "nav.locale": "🇷🇺",
 
-    "logo.description": "Приложение 'Smart Recipe' применяет в себе самые новые технологиии свежие идеи для того, чтобы сделать процесс приготовления удобными экономичным для вас.",
-    "logo.description.sub": "Новый взгляд на рецепты",
-    
-    "header.promo": "Промо-ролик",
-    "header.team": "Команда",
-    "header.speacial-thanks": "Отдельная благодарность",
-    "header.advantages": "Преимущества",
-    "header.roadmap": "Роадмап",
-    "header.contacts": "У вас остались вопросы?",
-    
-    "advantages.description.one": "Алгоритмы машинного обучения распознают на фотографии различные продукты и подбирают рецепты, учитывая наличие ингредиентов и ваши вкусовые предпочтения.",
-    "advantages.description.second": "Не нужно выходить из дома: недостающие продукты можно в один клик заказать в магазинах партнёров.",
-    "advantages.description.third": "Уникальная система интерактивных рецептов предлагает различные способы ускорения процесса приготовления.",
-    "advantages.description.fourth": "Вы можете добавить собственные рецепты и поделиться им с другими или оценить существующие.",
-    "advantages.description.fifth": "Подробная система фильтрации и сортировки позволит с легкостью подобрать вам нужный рецепт.",
-    "advantages.description.sixth": "Вы сможете настроить подбор рецептов под себя также благодаря блэклисту ингредиентов, сохранить рецепт в избранном.",
-    "advantages.description.seventh": "Вы сразу с лёгкостью сможете использовать весь функционал нашего приложения благодаря понятному интерфейсу с подробными гайдами на каждой странице.",
+  "logo.description": "Приложение 'Smart Recipe' применяет в себе самые новые технологиии свежие идеи для того, чтобы сделать процесс приготовления удобными экономичным для вас.",
+  "logo.description.sub": "Новый взгляд на рецепты",
 
-    "roadmap.guide": "- Сейчас мы здесь",
+  "header.promo": "Промо-ролик",
+  "header.team": "Команда",
+  "header.speacial-thanks": "Отдельная благодарность",
+  "header.advantages": "Преимущества",
+  "header.roadmap": "Роадмап",
+  "header.contacts": "У вас остались вопросы?",
 
-    "contacts.email": "Почта: ",
-    "contacts.media": "Наши соцсети:",
-    "contacts.form.name": "Имя",
-    "contacts.form.email": "Почта",
-    "contacts.form.text": "Текст",
-    "contacts.form.name.placeholder": "Ваше имя",
-    "contacts.form.email.placeholder": "Ваша почта",
-    "contacts.form.text.placeholder": "Текст обращения",
-    "contacts.form.submit-text": "Отправить",
+  "advantages.description.one": "Алгоритмы машинного обучения распознают на фотографии различные продукты и подбирают рецепты, учитывая наличие ингредиентов и ваши вкусовые предпочтения.",
+  "advantages.description.second": "Не нужно выходить из дома: недостающие продукты можно в один клик заказать в магазинах партнёров.",
+  "advantages.description.third": "Уникальная система интерактивных рецептов предлагает различные способы ускорения процесса приготовления.",
+  "advantages.description.fourth": "Вы можете добавить собственные рецепты и поделиться им с другими или оценить существующие.",
+  "advantages.description.fifth": "Подробная система фильтрации и сортировки позволит с легкостью подобрать вам нужный рецепт.",
+  "advantages.description.sixth": "Вы сможете настроить подбор рецептов под себя также благодаря блэклисту ингредиентов, сохранить рецепт в избранном.",
+  "advantages.description.seventh": "Вы сразу с лёгкостью сможете использовать весь функционал нашего приложения благодаря понятному интерфейсу с подробными гайдами на каждой странице.",
 
-    "locale": "ru"
+  "roadmap.guide": "- Сейчас мы здесь",
+
+  "contacts.email": "Почта: ",
+  "contacts.media": "Наши соцсети:",
+  "contacts.form.name": "Имя",
+  "contacts.form.email": "Почта",
+  "contacts.form.text": "Текст",
+  "contacts.form.name.placeholder": "Ваше имя",
+  "contacts.form.email.placeholder": "Ваша почта",
+  "contacts.form.text.placeholder": "Текст обращения",
+  "contacts.form.submit-text": "Отправить",
+
+  "locale": "ru",
+
+  "Мотякин Артем.name": "Мотякин Артем",
+  "Мотякин Артем.position": "Руководитель",
+  "Мотякин Артем.description": "Студент НИУ ВШЭ КБ 3 курс",
+  "Мотякин Артем.work": "Работа: Huawei AI Laboratory, отдел AI Optimization and Acceleration.",
+  "Мотякин Артем.info": "Увлечения: Project Management, участие в хакатонах в роли backend & ml разработчика",
+
+  "Копырин Максим.name": "Копырин Максим",
+  "Копырин Максим.position": "Teamlead front-end /designer",
+  "Копырин Максим.description": "Студент НИУ ВШЭ КБ 3 курс",
+  "Копырин Максим.work": "Работа: Ростелеком ЦОД отдел “Мониторинг защищенности”",
+  "Копырин Максим.info": "Увлечения: CTF, OSINT-разведка, front-end, design",
+
+  "Семенищев Матвей.name": "Семенищев Матвей",
+  "Семенищев Матвей.position": "Teamlead back-end",
+  "Семенищев Матвей.description": "Студент НИУ ВШЭ ИБ 3 курс",
+  "Семенищев Матвей.stack": "Postgres, Django, Selenium, REST API",
+  "Семенищев Матвей.info": "Увлечения: Разработка сайтов, парсинг данных, шахматы",
+
+  "Емельяненко Даниил.name": "Емельяненко Даниил",
+  "Емельяненко Даниил.position": "Devops/Системный архитектор",
+  "Емельяненко Даниил.description": "Студент НИУ ВШЭ КБ 3 курс",
+  "Емельяненко Даниил.work": "Работа: FullStack разработчик в компании АО «Нейросети»",
+  "Емельяненко Даниил.stack": "JS (VueJS, NestJS, AdonisJS), Python (Django)",
+  "Емельяненко Даниил.info": "Увлечения: рисование, игра на гитаре, хакатоны",
+
+  "Зотьев Егор.name": "Зотьев Егор",
+  "Зотьев Егор.position": "Продуктовый аналитик",
+  "Зотьев Егор.description": "Имеет свою студию по интеграции новых технологий и модернизации бизнес-процессов",
+  "Зотьев Егор.stack": "С/C++, Python",
+  "Зотьев Егор.info": "Увлечения: Продукт-аналитика, бизнес планирование",
+
+  "Федоров Михаил.name": "Федоров Михаил",
+  "Федоров Михаил.position": "Front-end/designer",
+  "Федоров Михаил.description": "НИУ ВШЭ ИБ 3 курсУчусь, постепенно развиваюсьв своей сфере",
+  "Федоров Михаил.work": "Люблю писать интересные небольшие программки, не только как домашки",
+  "Федоров Михаил.stack": "Python, JS",
+  "Федоров Михаил.info": "Увлечения: мода/дизайн, программирование",
+
+  "Гетун Сергей.name": "Гетун Сергей",
+  "Гетун Сергей.position": "Back-end разработчик",
+  "Гетун Сергей.description": "Студент НИУ ВШЭ КБ 3 курс",
+  "Гетун Сергей.stack": "Python, Django",
+  "Гетун Сергей.info": "Увлечения: написание back-end части для различных проектов, питон разработчик",
+
+  "Сендик Михаил.name": "Сендик Михаил",
+  "Сендик Михаил.position": "ML/СV разработчик",
+  "Сендик Михаил.description": "Студент МИСИС БИСТ-21-1 3 курс",
+  "Сендик Михаил.work": "Работа: smart contract developer",
+  "Сендик Михаил.stack": "ML engineer, CV, NLP",
+  "Сендик Михаил.info": "Увлечения: написание CV проектов в сфере игр и траффика",
+
+  "Комиссаренко Алексей.name": "Комиссаренко Алексей",
+  "Комиссаренко Алексей.position": "ML/СV разработчик",
+  "Комиссаренко Алексей.description": "Студент МИСИС БИСТ-21-1 3 курс",
+  "Комиссаренко Алексей.work": "Работа: ДИТ",
+  "Комиссаренко Алексей.stack": "Python, PyTorch, Classic ML, DL, CV, NLP",
+
+  "Бобер Станислав.name": "Бобер Станислав",
+  "Бобер Станислав.description": "Старший преподаватель НИУ ВШЭ",
+  "Бобер Станислав.work": "Работа: Главный разработчик ПО в компании СтатСофт",
+  "Бобер Станислав.position": "Руководитель направления",
+  "Бобер Станислав.info": "Увлечения: программирование, математическое моделирование"
 }
